Fixed all Jim's corrections.

--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.23 2009/10/14 13:04:02 ith Exp $
+% $Id: perts.tex,v 1.24 2009/10/29 12:37:11 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.23 2009/10/14 13:04:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.24 2009/10/29 12:37:11 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -23,17 +23,18 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 Cosmological perturbation theory is an essential tool for the analysis
-of cosmological models, in particular as the amount of observational
-data continues to increase. With the recent launch of the
+of cosmological models. It will become more so as the quantity and quality
+of observational
+data continues to improve. With the recent launch of the
 Planck satellite, the WMAP mission reaching its eighth
 year, and a host of other new experiments, we will have access to more
 information about the early universe than ever before
 \cite{planck,Komatsu:2008hk}.
 
-To distinguish between theoretical models 
+To distinguish between theoretical models, 
 it is necessary to go beyond the standard statistical analyses that
-have been so successful in the recent past. As a result much interest
-has been focused on non-Gaussianity as a new tool to help classify and
+have been so successful in recent years. As a result, much interest
+has been focused on non-Gaussianity as a new tool to classify and
 test models of the early universe. Perturbation theory beyond first
 order will be required to make the best possible use of 
 the data. In Chapter~\ref{ch:introduction} cosmological perturbations at first order
@@ -45,13 +46,12 @@ calculation, even on small and intermediate scales inside the horizon.
 
 Inflationary model building has for the past few years focused on
 meeting the requirements of first order perturbation theory, namely
-that the power spectra of scalar and tensor perturbations as defined in
-Eqs.~\eqref{eq:Prdefn-intro} and \eqref{eq:Ptdefn-intro} should match
+that the power spectra of scalar and tensor perturbations, as defined in
+Eqs.~\eqref{eq:Prdefn-intro} and \eqref{eq:Ptdefn-intro}, should match
 those observed in the CMB.  Inflationary
-models are classified and tested based on their predictions for $\Pr$, $n_s$ and
-$r$. As the
-potential for moving beyond first order perturbations has been
-explored, these three observable quantities have been joined by the non-Gaussianity
+models are classified and tested according to their predictions for $\Pr$, $n_s$ and
+$r$. 
+An important observable that arises at second order is the non-Gaussianity
 parameter $\fnl$. As described in Section~\ref{sec:fnl-intro}, this parameter is
 not yet well constrained by observational data in comparison with the
 other quantities. In Part~\ref{part:dbi}, however, it was shown that $\fnl$ can
@@ -62,17 +62,18 @@ There are two main approaches to studying higher order effects and
 non-Gaussianity.  
 The first uses nonlinear theory and a gradient expansion in various
 forms, either explicitly, \eg
-Refs.~\cite{Salopek:1990jq,Rigopoulos:2005xx} or through the
+Refs.~\cite{Salopek:1990jq,Rigopoulos:2005xx}, or through the
 $\Delta N$ formalism, \eg
 Refs.~\cite{Starobinsky:1982ee,
 Starobinsky:1986fxa, Sasaki:1995aw, Sasaki:1998ug,
 Lyth:2004gb,Lyth:2005fi,Langlois:2006vv}.
-Employing a gradient expansion restricts this approach, at least currently, to only
-being usable on scales much larger than the particle horizon.  
+
+However, a gradient expansion approach is restricted, at least
+currently, and can only be applied on scales much larger than the particle horizon.  
 The
-other approach uses cosmological perturbation theory following Bardeen
-\cite{Bardeen:1980kt} and extending it to second order,
-e.g.~Refs.~\cite{Tomita:1967,Mukhanov:1996ak,Bruni:1996im,
+second approach uses cosmological perturbation theory developed by Bardeen
+\cite{Bardeen:1980kt} and extends it to second order,
+\eg~Refs.~\cite{Tomita:1967,Mukhanov:1996ak,Bruni:1996im,
   Acquaviva:2002ud,Nakamura:2003wk,Noh:2004bc,
   Bernardeau:2002jy,Maldacena:2002vr,
   Finelli:2003bp,Bartolo:2004if,Enqvist:2004bk,Lyth:2005du,Seery:2005gb,
@@ -80,21 +81,21 @@ e.g.~Refs.~\cite{Tomita:1967,Mukhanov:1996ak,Bruni:1996im,
 \footnotetext{For an extensive list of references and a recent review on these
 issues see Ref.~\cite{Malik:2008im}.}
 %
-This works on all scales, but can be complex in comparison to the
-$\Delta N$ formalism. These two approaches give the
-same results on large scales \cite{Malik:2005cy}. We
+This approach works on all scales, but can be complex in comparison to the
+$\Delta N$ formalism. The two methods lead to identical results on large scales
+\cite{Malik:2005cy}. We
 will follow the Bardeen approach here.
 
 
 In Section~\ref{sec:fnl-intro} the first order perturbations of the inflaton field
 were taken to be purely Gaussian. It is therefore 
-necessary to go to second order in order to understand and estimate
+necessary to go to second order if we are to understand and estimate
 the non-Gaussian contribution of any inflationary model (for a recent
 review see Ref.~\cite{Malik:2008im}). Deriving the equations of motion is
 not trivial at second order and only recently was the Klein-Gordon
-equation for scalar fields derived in closed form, taking into account
+equation for scalar fields derived in closed form, taking into account the
 metric backreaction \cite{Malik:2006ir}. This allows for the first time
-a direct computation of the second order perturbation in full, in
+a direct and complete computation of the second order perturbation, in
 contrast with previous attempts which have focused only on certain
 terms in the expression, for example \Rref{Finelli:2006wk}.
 
@@ -107,31 +108,30 @@ terms in the expression, for example \Rref{Finelli:2006wk}.
 % order effects.
 In this chapter the equations of motion for first and second order field
 perturbations are described. These form the basis of the numerical calculation
-undertaken in the following two chapters.
+undertaken in Chapters~\ref{ch:numericalsystem} and \ref{ch:results}.
 % As this is, to the author's knowledge, the first numerical solution to the full
 % second order evolution equation 
 Chapter~\ref{ch:numericalsystem} describes the numerical implementation of the
 calculation, including the initial conditions used and the
 computational requirements. We outline the numerical steps
 taken in the system and examine the current constraints
-on the calculation. This calculation uses the slow roll version of the second
+on the calculation. The calculation is based on the slow roll version of the second
 order equation, but solves the full non-slow roll equations for the
-background and first order.
+background and first order systems.
 % 
-We present the results of this calculation
+We present the results of the calculation
 in Chapter~\ref{ch:results}, including a comparison of the second
-order perturbation calculated for the four potentials used. We discuss
-these results and describe the next steps required in detail.
+order perturbation calculated for specific inflationary potentials. 
 
 %
 % 
 The models tested in this calculation are single field models with a canonical
 action. Significant second order corrections
-are expected only when a non-canonical action or multiple fields are
-used, or slow roll is violated. Numerical simulations will be particularly
+are expected only in models with a non-canonical action or multiple fields, or
+when slow roll is violated. Numerical simulations will be particularly
 useful in analysing models with these characteristics.
 Section~\ref{sec:next-res} discusses planned future work to extend the current
-numerical system to deal with these extensions beyond the standard single field slow
+numerical system to deal with these extensions beyond the standard single field, slow
 roll inflation.
 
 
@@ -140,12 +140,13 @@ for first and second order perturbations are introduced. These will be the centr
 governing equations of the numerical calculation. They are
 initially written in
 terms of the metric perturbations and
-then described in closed form, \ie in terms of the field perturbations alone. In
-Section~\ref{sec:slowroll} the second order equation is written in a slow roll
+then described in closed form, \iec terms of the field perturbations
+alone. In
+Section~\ref{sec:slowroll}, the second order equation is written in a slow roll
 approximation.
 % 
 Section~\ref{sec:observable-perts} describes the observable quantities that can be
-calculated from second order field perturbations. In Section~\ref{sec:disc-perts} we
+calculated from second order field perturbations. In Section~\ref{sec:disc-perts}, we
 discuss the results of this chapter.
 
 
@@ -165,8 +166,8 @@ discuss the results of this chapter.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 
-In this section we will briefly review the derivation of first and
-second order perturbations in the uniform curvature gauge and describe
+In this section we will briefly review the derivation of the first and
+second order perturbation equations in the uniform curvature gauge and describe
 the slow roll approximation that will be used. There are
 many reviews on the subject of cosmological perturbation theory, and
 here we will follow Ref.~\cite{Malik:2008im}.  The full closed
@@ -179,12 +180,14 @@ outlined below.
 \label{sec:fosoperts-num}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 In Section~\ref{sec:perts-intro} cosmological perturbations of a single scalar field
-were introduced at first order. In this section we will consider perturbations up to
-second order, again working in the uniform curvature or flat
-gauge. 
-The steps taken in Section~\ref{sec:perts-intro} can be repeated at second order to
+were introduced at first order. 
+% In this section we will consider perturbations up to
+% second order, again working in the uniform curvature or flat
+% gauge. 
+The methods adopted in that section can be extended at second
+order to
 find gauge invariant quantities. Recall that scalar quantities such as the inflaton
-field, $\varphi$, can be split into an homogeneous background part, $\vp_0$, and
+field, $\varphi$, can be split into an homogeneous background, $\vp_0$, and
 inhomogeneous perturbations. Up to second order $\vp$ becomes
 %  
 \begin{equation}
@@ -207,20 +210,23 @@ g_{ij}&= a^2\left[\left(1-2\psi_1-\psi_2\right)\delta_{ij}
 +2E_{1,ij}+E_{2,ij}\right]\,,
 \end{align}
 %
-where $\delta_{ij}$ is the flat background metric, $\phi_1$ and $\phi_2$ the
-lapse functions at first and second order, $\psi_1$ and $\psi_2$ the curvature
-perturbations, and $B_1$, $B_2$, $E_1$ and $E_2$ are
+where $\delta_{ij}$ is the flat background metric, $\phi_1$ and $\phi_2$ are the
+lapse functions at first and second order, $\psi_1$ and $\psi_2$ are the curvature
+perturbations, and $B_1$, $B_2$, $E_1$ and $E_2$ are the
 scalar perturbations describing the shear.
 % 
-In addition to the first order transformation vector \eqref{eq:xidefn-intro} there is
-now also a second order tranformation vector
+In addition to the first order transformation vector \eqref{eq:xidefn-intro}, there
+is
+now a second order tranformation vector
 % 
 \begin{equation}
  \label{eq:xi2defn-perts}
 \xi_2^\mu = (\alpha_2, \beta_{2,}^{~~i}) \,,
 \end{equation}
 % 
-where the spatial vector part of the transformation has been ignored. As before we
+where the spatial vector part of the transformation has been ignored. 
+
+As before, we
 can write down how a second order scalar quantity (such as $\dvp2$) will be
 transformed \cite{Malik:2005cy}:
 % 
@@ -231,9 +237,9 @@ transformed \cite{Malik:2005cy}:
 \beta_{1,}^{~~i} \,,
 \end{equation}
 % 
-where a tilde ($\wt{~}$) again denotes a transformed quantity. 
+where a tilde ($\wt{~}$) denotes a transformed quantity. 
 The metric curvature perturbation transformation at first order is straightforward,
-$\wt{\psi_1} = \psi_1 -\H \alpha_1$, but at second order becomes more complicated
+$\wt{\psi_1} = \psi_1 -\H \alpha_1$, but at second order it becomes more complicated
 \cite{Malik:2005cy}:
 % 
 \begin{equation}
@@ -243,27 +249,31 @@ $\wt{\psi_1} = \psi_1 -\H \alpha_1$, but at second order becomes more complicate
               -\left(\H\alpha_1 -2\psi_1\right)_{,i} \beta_{1,}^{~~i}\,.
 \end{equation}
 % 
-We will work in the uniform curvature gauge where spatial 3-hypersurfaces are flat,
-so
+We will work in the uniform curvature gauge where spatial 3-hypersurfaces are flat.
+This implies that
 %  
 \begin{equation}
  \label{eq:gauge-num}
 \wt\psi_1=\wt\psi_2=\wt E_1=\wt E_2=0 \,.
 \end{equation}
 % 
-These relations can be used at first and then second order to define gauge
-invariant variables. From Section~\ref{sec:perts-intro} the first order
-transformation variables in flat gauge satisfy $\alpha_1 = \psi_1/\H$ and $\beta_1
+These relations can be used at first and then at second order to define gauge
+invariant variables. It follows from Section~\ref{sec:perts-intro} that the first
+order
+transformation variables in the flat gauge satisfy $\alpha_1 = \psi_1/\H$ and
+$\beta_1
 = -E_1$. At second order, for the transformation of scalar quantities, as in
-\eq{eq:dvp2transform-perts}, we require only $\alpha_2$ which is found by using
-\eq{eq:psi2transform-perts} to be
+\eq{eq:dvp2transform-perts}, we require only $\alpha_2$. This is found by using
+\eq{eq:psi2transform-perts} to have the form
+% 
 \begin{equation}
  \label{eq:alpha2-perts}
 \alpha_2 = \frac{1}{\H}\left( \psi_2 + \frac{1}{\H}\psi_1 \psi_1' + 2\psi_1^2 
              + \psi_{1,i} E_{1,}^{~~i} \right) \,.
 \end{equation}
+% 
 
-The Sasaki-Mukhanov variable, i.e.\ the field perturbation on uniform curvature
+The Sasaki-Mukhanov variable, \iec the field perturbation on uniform curvature
 hypersurfaces \cite{Sasaki:1986hm,Mukhanov:1988jd}, was given at first order in
 \eq{eq:flatdvp1-intro} as
 %  
@@ -272,7 +282,6 @@ hypersurfaces \cite{Sasaki:1986hm,Mukhanov:1988jd}, was given at first order in
 \wt{\dvp1}=\dvp1+\frac{\vp_{0}'}{\H}\psi_1\,.
 \end{equation}
 % 
-
 % 
 At second order the Sasaki-Mukhanov variable becomes more complicated
 \cite{Malik:2005cy,Malik:2003mv}:
@@ -287,20 +296,24 @@ At second order the Sasaki-Mukhanov variable becomes more complicated
 +{\cal{X}}\left(\psi,E\right)\,,
 \end{align}
 % 
-where ${\cal{X}}\left(\psi,E\right)$ contains terms quadratic in
+where ${\cal{X}}\left(\psi,E\right)$ contains terms that are quadratic in
 gradients of the metric perturbations $\psi_1$ and $E_1$. From now on we will
-drop the tildes and talk only about variables in the flat gauge.
-The potential of the scalar field is also split:
+drop the tildes and only refer to variables calculated in the flat gauge.
+
+
+The potential of the scalar field can also be separated into homogeneous and
+perturbed sectors:
 % 
-\begin{equation}
- V(\varphi) = \U + \delta V_{1} + \frac{1}{2}\delta V _{2}\,,\quad
- \delta V_{1} = \Uphi \dvp1 \,,\quad
- \delta V_{2} = \Upp \dvp1^2 + \Uphi\dvp2 \,.
-\end{equation}
+\begin{align}
+ V(\varphi) &= \U + \delta V_{1} + \frac{1}{2}\delta V _{2}\,,\quad \\
+ \delta V_{1} &= \Uphi \dvp1 \,,\quad \\
+ \delta V_{2} &= \Upp \dvp1^2 + \Uphi\dvp2 \,.
+\end{align}
 % 
 
 
-The Klein-Gordon equations describe the evolution of the scalar field and are
+Finally, the Klein-Gordon equations describe the evolution of the scalar field and
+are
 found by requiring the perturbed energy-momentum tensor $T_{\mu\nu}$ to obey the
 energy conservation equation $\nabla_\mu T^{\mu\nu}=0$ (see for example
 \Rref{Malik:2005cy}). For the
@@ -323,7 +336,7 @@ The first order equation is
 =0\,,
 \end{equation}
 %
-and the second order
+and the second order version is given by
 %
 \begin{align}
 \label{eq:KG2flatsingle-num}
@@ -339,21 +352,22 @@ and the second order
 &= 0\,,
 \end{align}
 % 
-where as mentioned before all the variables are now in the flat gauge.
+where all the variables are now in the flat gauge.
 
 
-In order to write the Klein-Gordon equations in closed form the Einstein field
+In order to write the Klein-Gordon equations in closed form, the Einstein field
 equations \eqref{eq:einstein-intro} are also required at first and second order.
-These are not reproduced here but can be seen in Section~II~B of
-\Rref{Malik:2006ir} for example. 
+These are not reproduced here, but are presented for example in Section~II~B of
+\Rref{Malik:2006ir}. 
 
 % % % % % % % % % % % % % % % % 
 \subsection{Fourier transform}
 \label{sec:fourier-perts}
 % % % % % % % % % % % % % % % % 
 % 
-The dynamics of the scalar field becomes clearer in Fourier space but terms in
-the second order equation of the form $\left(\dvp1(x)\right)^2$ require the use
+In general, the dynamics of the scalar field becomes clearer in Fourier space.
+However, terms at second order of the form
+$\left(\dvp1(x)\right)^2$ require the use
 of the convolution theorem (see for example \Rref{Vretblad:2005}).
 Following Refs.~\cite{book:liddle} and \cite{Malik:2006ir} we will write
 $\dvp{}(k^i)$
@@ -366,9 +380,7 @@ x^i)
 \end{equation}
 % 
 where $\kvi$ is the comoving wavenumber.
-
-
-In Fourier space the closed form of the first order Klein-Gordon equation
+In Fourier space, the closed form of the first order Klein-Gordon equation then
 transforms into
 %
 \begin{multline}
@@ -379,8 +391,11 @@ transforms into
 }{\H}\U\right)\right]\dvp1(\kvi) = 0 \,.
 \end{multline}
 %
-As mentioned above the second order equation requires more careful
-consideration with terms quadratic in the first order perturbation, which
+
+
+The second order equation requires a careful
+consideration of terms that are quadratic in the first order perturbation. In
+particular, we
 require convolutions of the form
 %
 \begin{equation}
@@ -389,10 +404,10 @@ require convolutions of the form
 g(q^i) \,.
 \end{equation}
 %
-For convenience we will group the terms with gradients of $\dvp1(x)$
-together and denote them by $F$. 
-The full closed form second order Klein-Gordon
-equation in Fourier Space is \cite{Malik:2006ir}
+For convenience we will group together those terms with gradients of $\dvp1(x)$
+and denote them by $F$. 
+The full closed form, second order Klein-Gordon
+equation in Fourier Space is then given by \cite{Malik:2006ir}
 %  
 \begin{align}
 \label{eq:SOKG-real-num}
@@ -418,13 +433,14 @@ equation in Fourier Space is \cite{Malik:2006ir}
  + a^2\left[\Uppp + \frac{8\pi G}{\H}\vp_{0}' \Upp\right] \dvp1(\pvi)
 \dvp1(\qvi) \biggr\} \nonumber \\
  %
-&+ F(\dvp1(\kvi), \dvp1'(\kvi)) = 0\,.
+&+ F(\dvp1(\kvi), \dvp1'(\kvi)) = 0\,,
 \end{align}
 %
-Here $Q=a^2 (8\pi G \U \vp_0'/\H + \Uphi)$ is used for convenience.
+where we have defined the parameter $Q=a^2 (8\pi G \U \vp_0'/\H + \Uphi)$ for
+convenience.
 The $F$ term contains gradients of $\dvp1$ in real space and therefore
 the convolution integrals include additional factors of $k$ and
-$q$. It is given by \cite{Malik:2006ir}
+$q$. The form of $F$ is given by \cite{Malik:2006ir}
 %
 \begin{align}
  \label{eq:Fdvk1-fourier-num}
@@ -490,20 +506,21 @@ Q\dvp1(\qvi)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-In order to establish the viability of a numerical calculation of the
+In order to establish the viability of a numerical calculation of the evolution of
+second order perturbations from the
 Klein-Gordon equation, Chapters~\ref{ch:numericalsystem} and \ref{ch:results} will be limited to
-considering the
-evolution of the second order perturbation in the slow roll approximation. 
+the framework of the slow roll approximation. 
 This involves taking
 %
-\begin{equation}
- \vp_{0}'' = \H \vp_{0}' \simeq 0\,,\quad
-\frac{\left(\vp_{0}'\right)^2}{2a^2}\ll \U\,,
-\end{equation}
+\begin{align}
+ \vp_{0}'' + \H \vp_{0}' &\simeq 0\,,\quad \\
+\frac{\left(\vp_{0}'\right)^2}{2a^2} &\ll \U\,,
+\end{align}
 %
 such that $Q=0$ and $\H^2 = (8\pi G/3) a^2 \U$. 
 In Chapter~\ref{ch:introduction} the slow-roll parameter $\varepsilon_H$ was
-defined. In this chapter and the rest of Part~\ref{part:numerical} a different slow 
+defined in \eq{eq:epsilonHdefn-intro}. 
+In this chapter and the rest of Part~\ref{part:numerical} a different slow 
 roll parameter will be used, called
 $\bar{\varepsilon}_H$ and defined in Refs.~\cite{Malik:2006ir} and
 \cite{Seery:2005gb}. 
@@ -513,12 +530,13 @@ This new parameter is the square-root of $\varepsilon_H$ and is given by
  \bar{\varepsilon}_H = \sqrt{4\pi G} \frac{\vp_{0}'}{\H} = \sqrt{\varepsilon_H}\,.
 \end{equation}
 %
-The second slow roll parameter is still $\eta_H$. Following \Rref{Malik:2006ir} we
+The second slow roll parameter is still $\eta_H = \varepsilon_H -
+\varepsilon_H'/2\H \varepsilon_H$. Following \Rref{Malik:2006ir} we
 will implement the slow roll approximation by keeping terms up to and including
 $\mathcal{O}(\bar{\varepsilon}^2_H)$ and terms which are
 $\mathcal{O}(\bar{\varepsilon}_H \eta_H)$. 
-With this approximation the second order equation (\ref{eq:SOKG-real-num})
-simplifies dramatically, and with the $F$ term included is
+Within this approximation the second order equation (\ref{eq:SOKG-real-num})
+simplifies dramatically, and with the $F$ term reduces to
 %
 \begin{align}
  \label{eq:KG2-fourier-sr-num}
@@ -558,8 +576,8 @@ a^2\left(\Uppp
 %
 The numerical simulation described in Chapter~\ref{ch:numericalsystem} will solve the
 slow roll version of the second order equation given above,
-\eq{eq:KG2-fourier-sr-num}, the full first
-order equation (\ref{eq:fokg}) and the full background equation
+\eq{eq:KG2-fourier-sr-num}, together with the complete first
+order equation (\ref{eq:fokg}) and background equation
 (\ref{eq:KGback-num}). 
 % 
 % 
@@ -574,17 +592,20 @@ order equation (\ref{eq:fokg}) and the full background equation
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-Cosmological perturbations at second order are becoming increasingly important as
-statistical quantities beyond the power spectrum and spectral index are
+Cosmological perturbations at second order are becoming increasingly important now
+that
+statistical quantities beyond the power spectrum and spectral index are being
 investigated. Observations, however, do not tell us anything about the inflaton
 field directly. In this section the second order perturbations described above will
-be related to observable quantities to demonstrate how a numerical calculation could
-be useful in the future.
+be related to observable quantities in order to demonstrate how a numerical
+calculation could
+be employed in the near future to gain further insight into the nature of the field
+that drives inflation.
 % 
 
 The temperature fluctuations observed in the CMB can
 be directly related to the curvature perturbation $\R$. In
-Section~\ref{sec:perts-intro} $\R$ was defined at first order in terms of $\dvp1$.
+Section~\ref{sec:perts-intro}, $\R$ was defined at first order in terms of $\dvp1$.
 When the second order contribution is included the total comoving curvature
 perturbation is defined as
 % 
@@ -593,10 +614,11 @@ perturbation is defined as
  \R = \R_1 + \frac{1}{2}\R_2\,.
 \end{equation}
 % 
-The first order part is related to the inflaton perturbation in flat gauge by $\R_1
+The first order term is related to the inflaton perturbation in the flat gauge by
+$\R_1
 = \H\dvp1/\vp_0'$. The second order part includes terms quadratic in $\dvp1$ and so
 in Fourier space requires convolutions. We are interested in the value of $\R$ after
-horizon crossing for the calculation of $\Pr$ and determination of the
+horizon crossing for the calculation of $\Pr$ and a determination of the
 non-gaussianity produced during inflation. This allows us to neglect gradient terms
 in real space or terms proportional to $k$ in Fourier space.
 In this limit the real space expression for $\R_2$ is \cite{Malik:2005cy}
@@ -608,8 +630,8 @@ In this limit the real space expression for $\R_2$ is \cite{Malik:2005cy}
  - \H' -2\H^2 \right)\,.
 \end{equation}
 % 
-By using the background evolution equation \eq{eq:KGback-num} and going to Fourier
-space this can be written as
+Using the background evolution equation \eqref{eq:KGback-num} and transforming to
+Fourier space implies that \eq{eq:R2real-perts} can be written as
 % 
 \begin{align}
  \R_2(\eta, \kvi) &= \frac{\H}{\vp_0'}\dvp2(\eta, \kvi) 
@@ -625,12 +647,12 @@ space this can be written as
 \end{align}
 % 
 Once the numerical calculation has been carried out at first and second order as
-described in Chapter~\ref{ch:numericalsystem} this quantity could be evaluated after
+described in Chapter~\ref{ch:numericalsystem} this quantity can be evaluated after
 horizon crossing.
 
 In Chapter~\ref{ch:introduction} the non-gaussianity parameter $\fnlloc$ was defined
 in terms of $\R$ in \eq{eq:fnllocdefn-intro}. Writing \eq{eq:fnllocdefn-intro} in
-Fourier space using \eq{eq:Rfulldefn-perts} gives
+Fourier space using \eq{eq:Rfulldefn-perts} implies that
 % 
 \begin{align}
  \R(\kvi) &= \R_1(\kvi) + \frac{1}{2}\R_2(\kvi) \nonumber \\
@@ -642,8 +664,8 @@ Fourier space using \eq{eq:Rfulldefn-perts} gives
   &\quad- \left\langle \frac{1}{(2\pi)^3} \int \d q^3\, \R_1(\qvi)
 \R_1(\kvi-\qvi) \right\rangle \Bigg) \,.
 \end{align}
-
-A good approximation of the local non-gaussianity produced is then 
+% 
+A good approximation of the local non-gaussianity produced is then given by
 % 
 \begin{align}
  \label{eq:fnlloc-perts}
@@ -654,8 +676,9 @@ A good approximation of the local non-gaussianity produced is then
 \R_1(\kvi-\qvi) \right\rangle \Bigg]^{-1} \,.
 \end{align}
 % 
-Calculating $\dvp2$ and $\R_2$ would provide a direct insight into the behaviour and
-production of the non-gaussianity parameter $\fnl$. 
+Calculating $\dvp2$ and $\R_2$ therefore provides direct insight into the behaviour
+and
+production of the non-gaussianity parameter $\fnlloc$. 
 
 % 
 % 
@@ -670,20 +693,24 @@ production of the non-gaussianity parameter $\fnl$.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-In this chapter equations of motion have been introduced for a single scalar field
-up to second order in cosmological perturbations. The second order gauge
+In this chapter, the equations of motion for a single scalar
+field
+up to second order in cosmological perturbations have been introduced. The second
+order gauge
 transformation has been discussed and the transformation components determined for
 the uniform curvature gauge.
 % 
 In Chapter~\ref{ch:introduction} first order classical perturbations were quantised
-in the Minkowski space limit and normalised using the Wronskian condition in
-\eq{eq:quantcondition-intro}. This constraint also fixes the quantisation for all
-the other orders of perturbation including $\dvp2$ \cite{Seery:2008qj}. 
+in the Minkowski spacetime limit and normalised using the Wronskian condition in
+\eq{eq:quantcondition-intro}. This constraint also fixes the quantisation for other
+orders of the perturbation, including $\dvp2$ \cite{Seery:2008qj}. 
 
-The perturbation equations are better understood in Fourier space although the cost
-of this approach is the necessity of convolution integrals of the first order
-perturbations. Written in Fourier space the second order Klein-Gordon equation can
-be described purely in terms of the field perturbations and background quantities. 
+The perturbation equations are better understood in Fourier space, although the cost
+of adopting this approach is the need to employ convolution integrals of the first
+order
+perturbations. When written in Fourier space, the second order Klein-Gordon equation
+can
+be described entirely in terms of the field perturbations and background quantities. 
 
 \eq{eq:SOKG-real-num}, first derived in \Rref{Malik:2006ir}, is valid on all scales
 inside and outside the horizon. When a particular slow roll approximation is made
@@ -692,10 +719,10 @@ version of the equation will be the central governing equation of the numerical
 calculation described in the next chapter.
 
 Finding numerical solutions of \eq{eq:KG2-fourier-sr-num} is the first step towards
-solving the full equation \eqref{eq:SOKG-real-num} for a single field then
-ultimately in the multi-field case given in \Rref{Malik:2006ir}. Understanding
-cosmological perturbations beyond the linear first order is critical to accurately
-calculating higher order statisical effects. Section~\ref{sec:observable-perts}
+solving the full equation \eqref{eq:SOKG-real-num} for a single field and
+ultimately the multi-field equation given in \Rref{Malik:2006ir}. Understanding
+cosmological perturbations beyond linear order is critical if higher order statisical
+effects are to be accurately calculated. Section~\ref{sec:observable-perts}
 outlined the connection between $\dvp2$ and observable quantities such as the
 comoving curvature perturbation and the non-Gaussianity of the perturbations. Going
 beyond single field slow roll models, non-linear effects become more important. In
