Changed to using K_2

--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.22 2009/10/14 18:37:02 ith Exp $
+% $Id: results.tex,v 1.23 2009/10/29 17:26:00 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.22 2009/10/14 18:37:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.23 2009/10/29 17:26:00 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -319,7 +319,7 @@ exited the horizon. The $k$ range shown here is $K_1=\left[ 1.9\e{-5}, 0.039
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 All the results quoted so far are for the $V(\vp)=\msqphisq$ model. In this section
-the results for all four potentials will be compared using the K2 range for $k$. 
+the results for all four potentials will be compared using the $K_2$ range for $k$. 
 % 
 % 
 \begin{figure}
@@ -383,7 +383,7 @@ four different potentials used.}
 \end{figure}
 % 
 The source term for each model is shown separately in Figure~\ref{fig:sourcecomparison-res} for
-$\kwmap$ using the K2 range\footnotemark. 
+$\kwmap$ using the $K_2$ range\footnotemark. 
 % 
 \footnotetext{These plots use a different $k$ range to the ones comparing $V(\vp)=\msqphisq$ and
 $\lambdaphifour$ in \Rref{hustonmalik}.}
